--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 
 <body>
     <!-- header start  -->
-    <header></header>
+    <header class="">
+        <nav>
+            <div class="site-title">
+                <img class="logo" src="images/icons/logo.png" alt="">
+                <h1>Idea</h1>
+            </div>
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Works</a>
+                <a href="#">
+                    <img src="images/icons/profile.png" alt="">
+                </a>
+            </div>
+        </nav>
+    </header>
     <!-- header end  -->
     <!-- main start  -->
     <main>
